--- a/src/lab/exp10/Objective.html
+++ b/src/lab/exp10/Objective.html
@@ -1,51 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <!--Google Tag Manager--><script class="gtm">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-         })(window,document,'script','dataLayer','GTM-W59SWTR');
-      </script><!--End Google Tag Manager-->
-      <meta charset="utf-8"/>
-      <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-      <meta content="width=device-width, initial-scale=1" name="viewport"/>
-      <meta content="Welcome to Virtual Labs - A MHRD Govt of india Initiative" name="description"/>
-      <meta content="Virtual Labs - A MHRD Govt of india Initiative" name="author"/>
-      <title>Welcome to Virtual Labs - A MHRD Govt of india Initiative</title>
-      <link href="../images/favicon.ico" rel="shortcut icon"/>
-      <link href="../css/bootstrap.min.css" rel="stylesheet"/>
-      <!-- Important Owl stylesheet -->
-      <link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet"/>
-      <link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet"/>
-      <link href="../vendors/font-awesome/css/font-awesome.css" rel="stylesheet"/>
-      <!-- Custom CSS -->
-      <link href="../css/style.css" rel="stylesheet"/>
-      <!--	<script src="tabs.js" type="text/javascript"></script>
+<head>
+    <!--Google Tag Manager-->
+    <script class="gtm">
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-W59SWTR');
+    </script>
+    <!--End Google Tag Manager-->
+    <meta charset="utf-8" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta
+      content="Welcome to Virtual Labs - A MHRD Govt of india Initiative"
+      name="description"
+    />
+    <meta
+      content="Virtual Labs - A MHRD Govt of india Initiative"
+      name="author"
+    />
+    <title>Welcome to Virtual Labs - A MHRD Govt of india Initiative</title>
+    <link href="../images/favicon.ico" rel="shortcut icon" />
+    <link href="../css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Important Owl stylesheet -->
+    <link href="../vendors/owl-carousel/owl.carousel.css" rel="stylesheet" />
+    <link href="../vendors/owl-carousel/owl.theme.css" rel="stylesheet" />
+    <link
+      href="../vendors/font-awesome/css/font-awesome.css"
+      rel="stylesheet"
+    />
+    <!-- Custom CSS -->
+    <link href="../css/style.css" rel="stylesheet" />
+    <!--	<script src="tabs.js" type="text/javascript"></script>   
          <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-67558473-1', 'auto');ga('send', 'pageview');</script>	-->
-   </head>
-   <body class="index" id="page-top">
-      <!--Google Tag Manager (noscript)-->
-      <noscript class="gtm"><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-W59SWTR" style="display:none;visibility:hidden" width="0"></iframe></noscript>
-      <!--End Google Tag Manager (noscript)-->
-      <div id="top">
-         <header>
-            <!-- Navigation -->
-            <nav class="navbar navbar-default " style="background-color: white !important; margin-bottom: 0px !important;">
-               <div class="container-fluid">
-                  <!-- Brand and toggle get grouped for better mobile display -->
-                  <div class="navbar-header page-scroll">
-                     <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-                     <span class="sr-only">Toggle navigation</span>
-                     <span class="icon-bar" style="background-color: #77BB41"></span>
-                     <span class="icon-bar" style="background-color: #77BB41"></span>
-                     <span class="icon-bar" style="background-color: #77BB41"></span>
-                     </button>
-                     <a class="navbar-brand main-logo-a" href="http://vlab.co.in/"><img class="img-responsive main-logo" src="../images/logo-new.png"/></a>
-                  </div>
-                  <!-- Collect the nav links, forms, and other content for toggling -->
-                  <div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
-                     <!-- <ul class="nav navbar-nav navbar-right menu-ul search-ul" style="position: relative; top: -5px;">
+ </head>
+  <body class="index" id="page-top">
+    <!--Google Tag Manager (noscript)-->
+    <noscript class="gtm"
+      ><iframe
+        height="0"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-W59SWTR"
+        style="display: none; visibility: hidden"
+        width="0"
+      ></iframe
+    ></noscript>
+    <!--End Google Tag Manager (noscript)-->
+    <div id="top">
+      <header>
+        <!-- Navigation -->
+        <nav
+          class="navbar navbar-default"
+          style="
+            background-color: white !important;
+            margin-bottom: 0px !important;
+          "
+        >
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+              <button
+                class="navbar-toggle"
+                data-target="#bs-example-navbar-collapse-1"
+                data-toggle="collapse"
+                type="button"
+              >
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar" style="background-color: #77bb41"></span>
+                <span class="icon-bar" style="background-color: #77bb41"></span>
+                <span class="icon-bar" style="background-color: #77bb41"></span>
+              </button>
+              <a class="navbar-brand main-logo-a" href="http://vlab.co.in/"
+                ><img
+                  class="img-responsive main-logo"
+                  src="../images/logo-new.png"
+              /></a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div
+              class="collapse navbar-collapse menu-div"
+              id="bs-example-navbar-collapse-1"
+              style="border: 0px"
+            >
+              <!-- <ul class="nav navbar-nav navbar-right menu-ul search-ul" style="position: relative; top: -5px;">
                         <li>
                         	<form method="get" action="../../../search-result.html">
                                	<input type="text" class="search-textbox" placeholder="SEARCH FOR A LAB" name="q" id="q"/>
@@ -53,29 +96,26 @@
                                </form>
                         </li>
                         </ul> -->
-                     <ul class="nav navbar-nav navbar-right menu-ul">
-                        <li class="page-scroll menu-li ">
-                           <a class="menu-a" href="http://vlab.co.in/">HOME</a>
-                        </li>
-                        <li class="page-scroll menu-li ">
-                           <a class="menu-a" href="http://vlab.co.in/participating-institutes">PARTNERS</a>
-                        </li>
-                        <li class="page-scroll menu-li ">
-                           <a class="menu-a" href="http://vlab.co.in/contact-us">CONTACT</a>
-                        </li>
-                     </ul>
-                  </div>
-                  <!-- /.navbar-collapse -->  
-               </div>
-               <!-- /.container-fluid -->
-            </nav>
-         </header>
-         <div id="content">
-            <div class="container-fluid">
-               <div class="row" style="height: 16px !important;">
-                  <hr style="background:#ff6600 !important;  height: 8px; margin-top: 0px;"/>
-               </div>
-               <!-- row end -->
+            <ul class="nav navbar-nav navbar-right menu-ul">
+                <li class="page-scroll menu-li">
+                  <a class="menu-a" href="http://vlab.co.in/">HOME</a>
+                </li>
+                <li class="page-scroll menu-li">
+                  <a
+                    class="menu-a"
+                    href="http://vlab.co.in/participating-institutes"
+                    >PARTNERS</a
+                  >
+                </li>
+                <li class="page-scroll menu-li">
+                  <a class="menu-a" href="http://vlab.co.in/contact-us"
+                    >CONTACT</a
+                  >
+                </li>
+                <li class="page-scroll menu-li">
+                  <input type="text" class="menu-a" placeholder="Search" />
+                </li>
+              </ul>
             </div>
             <!-- container-fluid end for slider -->
             <!-- =================================================================================================================================== -->
